--- a/formats/climate_conscious_pastoral_exile_diaspora_complete.html
+++ b/formats/climate_conscious_pastoral_exile_diaspora_complete.html
@@ -175,102 +175,11 @@
 <header id="title-block-header">
 <h1 class="title">The Weight of Water</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#chapter-1" id="toc-chapter-1">CHAPTER 1</a></li>
-<li><a href="#chapter-2" id="toc-chapter-2">CHAPTER 2</a></li>
-<li><a href="#chapter-3" id="toc-chapter-3">CHAPTER 3</a></li>
-<li><a href="#chapter-4" id="toc-chapter-4">Chapter 4</a>
-<ul>
-<li><a href="#chapter-4-1" id="toc-chapter-4-1">CHAPTER 4</a></li>
-</ul></li>
-<li><a href="#chapter-5" id="toc-chapter-5">Chapter 5</a>
-<ul>
-<li><a href="#chapter-5-1" id="toc-chapter-5-1">CHAPTER 5</a></li>
-</ul></li>
-<li><a href="#chapter-6" id="toc-chapter-6">Chapter 6</a>
-<ul>
-<li><a href="#chapter-6-1" id="toc-chapter-6-1">CHAPTER 6</a></li>
-</ul></li>
-<li><a href="#chapter-7" id="toc-chapter-7">Chapter 7</a>
-<ul>
-<li><a href="#chapter-7-1" id="toc-chapter-7-1">CHAPTER 7</a></li>
-</ul></li>
-<li><a href="#chapter-8" id="toc-chapter-8">Chapter 8</a>
-<ul>
-<li><a href="#chapter-8-1" id="toc-chapter-8-1">CHAPTER 8</a></li>
-</ul></li>
-<li><a href="#chapter-9" id="toc-chapter-9">Chapter 9</a>
-<ul>
-<li><a href="#chapter-9-1" id="toc-chapter-9-1">CHAPTER 9</a></li>
-</ul></li>
-<li><a href="#chapter-10" id="toc-chapter-10">Chapter 10</a>
-<ul>
-<li><a href="#chapter-10-1" id="toc-chapter-10-1">CHAPTER 10</a>
-<ul>
-<li><a href="#section" id="toc-section"></a></li>
-<li><a href="#section-1" id="toc-section-1"></a></li>
-</ul></li>
-</ul></li>
-<li><a href="#chapter-11" id="toc-chapter-11">Chapter 11</a>
-<ul>
-<li><a href="#chapter-11-1" id="toc-chapter-11-1">CHAPTER 11</a></li>
-</ul></li>
-<li><a href="#chapter-12" id="toc-chapter-12">Chapter 12</a>
-<ul>
-<li><a href="#chapter-27" id="toc-chapter-27">CHAPTER 27</a></li>
-</ul></li>
-<li><a href="#chapter-13" id="toc-chapter-13">Chapter 13</a>
-<ul>
-<li><a href="#chapter-13-1" id="toc-chapter-13-1">CHAPTER 13</a></li>
-</ul></li>
-<li><a href="#chapter-14" id="toc-chapter-14">Chapter 14</a>
-<ul>
-<li><a href="#chapter-14-1" id="toc-chapter-14-1">CHAPTER 14</a></li>
-</ul></li>
-<li><a href="#chapter-15" id="toc-chapter-15">Chapter 15</a>
-<ul>
-<li><a href="#chapter-15-1" id="toc-chapter-15-1">CHAPTER 15</a></li>
-</ul></li>
-<li><a href="#chapter-16" id="toc-chapter-16">Chapter 16</a>
-<ul>
-<li><a href="#chapter-16-1" id="toc-chapter-16-1">CHAPTER 16</a></li>
-</ul></li>
-<li><a href="#chapter-17" id="toc-chapter-17">Chapter 17</a>
-<ul>
-<li><a href="#chapter-17-1" id="toc-chapter-17-1">CHAPTER 17</a></li>
-</ul></li>
-<li><a href="#chapter-18" id="toc-chapter-18">Chapter 18</a>
-<ul>
-<li><a href="#chapter-18-1" id="toc-chapter-18-1">CHAPTER 18</a></li>
-</ul></li>
-<li><a href="#chapter-19" id="toc-chapter-19">Chapter 19</a>
-<ul>
-<li><a href="#chapter-19-1" id="toc-chapter-19-1">CHAPTER 19</a></li>
-</ul></li>
-<li><a href="#chapter-20" id="toc-chapter-20">Chapter 20</a>
-<ul>
-<li><a href="#chapter-20-1" id="toc-chapter-20-1">CHAPTER 20</a></li>
-</ul></li>
-<li><a href="#chapter-21" id="toc-chapter-21">Chapter 21</a>
-<ul>
-<li><a href="#chapter-21-1" id="toc-chapter-21-1">CHAPTER 21</a></li>
-</ul></li>
-<li><a href="#chapter-22" id="toc-chapter-22">Chapter 22</a>
-<ul>
-<li><a href="#chapter-22-1" id="toc-chapter-22-1">CHAPTER 22</a></li>
-</ul></li>
-<li><a href="#chapter-23" id="toc-chapter-23">Chapter 23</a>
-<ul>
-<li><a href="#chapter-23-1" id="toc-chapter-23-1">CHAPTER 23</a></li>
-</ul></li>
-<li><a href="#chapter-24" id="toc-chapter-24">Chapter 24</a>
-<ul>
-<li><a href="#chapter-24-1" id="toc-chapter-24-1">CHAPTER 24</a></li>
-</ul></li>
-</ul>
-</nav>
-<h2 id="chapter-1">CHAPTER 1</h2>
+<div style="text-align:center;margin-bottom:2em">
+<img src="cover.jpg" alt="Cover" style="max-width:400px"/>
+</div>
+<h1 id="chapter-1">Chapter 1</h1>
+<h2 id="chapter-1-1">CHAPTER 1</h2>
 <p>The first thing you learn is the weight of water.</p>
 <p>It’s not the weight of a bucket, hauled from a well. That’s a clean,
 singular ache in the shoulder. This is different. This weight is in the
@@ -452,7 +361,8 @@ things you have to grow.”</p>
 water was nothing compared to the weight of a home. And I would make
 them drown in it before I let them take it from me.</p>
 <hr />
-<h2 id="chapter-2">CHAPTER 2</h2>
+<h1 id="chapter-2">Chapter 2</h1>
+<h2 id="chapter-2-1">CHAPTER 2</h2>
 <p>The seed bank was in the cool, stone-lined root cellar, beneath the
 oldest part of the house. It was our library, our treasury, our ark.
 Glass jars and meticulously labelled paper packets lined the shelves,
@@ -622,7 +532,8 @@ storm we were choosing to summon. “And the boy?”</p>
 plunging the room into a darkness softened by starlight. “We all have to
 choose now. The time for quiet exile is over.”</p>
 <hr />
-<h2 id="chapter-3">CHAPTER 3</h2>
+<h1 id="chapter-3">Chapter 3</h1>
+<h2 id="chapter-3-1">CHAPTER 3</h2>
 <p>The message went out by the oldest means we had: foot and memory.</p>
 <p>Kieran was dispatched at first light, his pack loaded with jars of
 our last honey, each one containing a single, fat scarlet runner bean. A
