update format file (W726)

--- a/formats/climate_conscious_pastoral_exile_diaspora_complete.html
+++ b/formats/climate_conscious_pastoral_exile_diaspora_complete.html
@@ -180,7 +180,12 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1">CHAPTER 1</h2>
-<p>The first thing you learn is the weight of water.</p>
+<p>Mud claimed the last road first. Then the salt. Now only the dike-top
+path remained, a slender spine of packed earth between the drowned
+fields and the hungry sea. Elise walked it daily, measuring the retreat.
+Her grandfather’s farmstead slept beneath a silver sheet two kilometers
+out, its chimney a stone finger pointing a silent, permanent accusation
+at the sky.</p>
 <p>It’s not the weight of a bucket, hauled from a well. That’s a clean,
 singular ache in the shoulder. This is different. This weight is in the
 air. It’s the damp that settles in your lungs before dawn, a wool
